# mud

./: .coveragerc  .flake8  .flake8.ini  .gitignore  .hound.yml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  MUD-Linear-Dimension.ipynb  README.md  README.rst  badges.rst  publish.sh  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  docker.yml  main.yml  publish-pypi.yml  publish.yml
data/: poisson_data  ref_1000_2u.pkl
docs/: Makefile  about.rst  conf.py  index.rst  readme.rst  requirements.txt
notebooks/: FenicsSolve.ipynb  MUD-ADCIRC-Figs.ipynb  MUD_Butler_2021.ipynb  MUD_PDE.ipynb  Nonlinear_Examples.ipynb  ODE_ExpDecay.ipynb  Poisson.ipynb  SequentialLinearInversions.ipynb  WegihtedSimple.ipynb  WeightedSimple.ipynb
scripts/: pilosov2022Parameter.sh  pilosov_2022_parameter.py
src/mud/: __init__.py  base.py  cli.py  data_consistent.py  examples.py  funs.py  linear.py  mud.py  norm.py  norms.py  pca.py  pde.py  plot.py  plotting.py  preprocessing.py  skeleton.py  util.py  utils.py
src/mud/examples/: __init__.py  adcirc.py  comparison.py  examples.py  exp_decay.py  fenics.py  lin_cond.py  linear.py  poisson.py  simple.py
tests/: conda_setup.sh  conftest.py  test_base.py  test_cli.py  test_fun.py  test_funs.py  test_norm.py  test_setting_predicted.py  test_skeleton.py  test_util.py  travis_install.sh
tests/data/: adcirc_data  poisson_data
